--- a/src/app/home/return-product/return-product-detail/return-product-detail.component.html
+++ b/src/app/home/return-product/return-product-detail/return-product-detail.component.html
@@ -8,17 +8,15 @@
 <td>{{productData?.convertedQuantity}} {{productData?.viewBaseProductUnit.baseUnit}}</td>
 <td>{{productData?.returnedQuantity}} {{productData?.viewBaseProductUnit.baseUnit}}</td>
 <td *ngIf="checkFull == true">{{productData?.quantity * productData?.unitPrice | currency:'VND'}}</td>
-<td>{{productData?.viewBaseProductUnit.baseUnitPrice | currency:'VND'}} / {{productData?.viewBaseProductUnit.baseUnit}}
-</td>
+<!-- <td>{{productData?.viewBaseProductUnit.baseUnitPrice | currency:'VND'}} / {{productData?.viewBaseProductUnit.baseUnit}} -->
+<!-- </td> -->
 <td *ngIf="checkFull != true">
   <nz-input-number [(ngModel)]="quantityProduct" [nzMin]="1"
     [nzMax]="productData?.convertedQuantity - productData?.returnedQuantity" [nzStep]="1"
     (ngModelChange)="changeQuantity()"></nz-input-number>
 </td>
 <td *ngIf="checkFull != true">
-  <nz-input-number [(ngModel)]="batchTotalprice" [nzMin]="1" [nzMax]="1000000000" [nzStep]="1"
-    (ngModelChange)="changeTotalPrice()">
-  </nz-input-number>
+  {{batchTotalprice}}
 </td>
 <td *ngIf="checkFull != true">
   <i class="fa fa-trash" role="button" (click)="deleteBatch()"></i>
